# backend/src/modules/library/library.routes.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import { requireAuth } from "../../middlewares/auth.middleware";
-import { syncLibraryController, getLibraryController } from "./library.controller";
+import { syncLibraryController, getLibraryController, getLibraryReportController } from "./library.controller";
 
 const libraryRouter = Router();
 
@@ -8,5 +8,6 @@ libraryRouter.use(requireAuth);
 
 libraryRouter.post("/sync", syncLibraryController);
 libraryRouter.get("/", getLibraryController);
+libraryRouter.get("/report", getLibraryReportController);
 
 export default libraryRouter;
